--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,12 @@
     <repository>
         <id>nexus-releases</id>
         <name>maven-releases</name>
-        <url>http://localhost:8081/repository/maven-releases/</url>
+        <url>http://43.204.22.88:8081/repository/maven-releases/</url>
     </repository>
     <repository>
         <id>nexus-snapshots</id>
         <name>maven-snapshots</name>
-        <url>http://localhost:8081/repository/maven-snapshots/</url>
+        <url>http://43.204.22.88:8081/repository/maven-snapshots/</url>
     </repository>
 </repositories>
   
@@ -45,11 +45,11 @@
 <distributionManagement>
     <repository>
         <id>nexus-releases</id>
-        <url>http://localhost:8081/repository/maven-releases/</url>
+        <url>http://43.204.22.88:8081/repository/maven-releases/</url>
     </repository>
     <snapshotRepository>
         <id>nexus-snapshots</id>
-        <url>http://localhost:8081/repository/maven-snapshots/</url>
+        <url>http://43.204.22.88:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
 </distributionManagement>
     
