--- a/pom.xml
+++ b/pom.xml
@@ -82,11 +82,11 @@
   <distributionManagement>
     <repository>
         <id>nexus-releases</id>
-        <url>http://localhost:8081/repository/maven-releases/</url>
+        <url>http://43.204.22.88:8081/repository/maven-releases/</url>
     </repository>
     <snapshotRepository>
         <id>nexus-snapshots</id>
-        <url>http://localhost:8081/repository/maven-snapshots/</url>
+        <url>http://43.204.22.88:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
 </distributionManagement>
 </project>
